2016-09-05  Uros Bizjak  <ubizjak@gmail.com>

	PR rtl-optimization/77452
	* gcc.target/i386/pr77452.c: New test.

2016-09-05  Marek Polacek  <polacek@redhat.com>

	PR c/77423
	* c-c++-common/Wlogical-not-parentheses-3.c: New test.

2016-09-04  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/77391
	* gfortran.dg/pr77391.f90: New test.

2016-09-04  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/77460
	* gfortran.dg/pr77460.f90: New test.

2016-09-03  Jakub Jelinek  <jakub@redhat.com>

	PR c/65467
	* gcc.dg/gomp/_Atomic-4.c: Require vect_simd_clones effective target.

2016-09-02  Kirill Yukhin  <kirill.yukhin@gmaile.com>

	* gcc.target/i386/avx512f-klogic-2.c: Fix operand calculation order.

2016-09-02  David Malcolm  <dmalcolm@redhat.com>

	* gcc.dg/plugin/diagnostic-test-show-locus-generate-patch.c: New
	test case.
	* gcc.dg/plugin/plugin.exp (plugin_test_list): Add
	diagnostic-test-show-locus-generate-patch.c to the sources
	for diagnostic_plugin_test_show_locus.c.

2016-09-02  Jakub Jelinek  <jakub@redhat.com>

	PR c/65467
	* gcc.dg/gomp/_Atomic-1.c: New test.
	* gcc.dg/gomp/_Atomic-2.c: New test.
	* gcc.dg/gomp/_Atomic-3.c: New test.
	* gcc.dg/gomp/_Atomic-4.c: New test.
	* gcc.dg/gomp/_Atomic-5.c: New test.

	PR sanitizer/77396
	* g++.dg/asan/pr77396.C: New test.

2016-09-01  Martin Sebor  <msebor@redhat.com>

	PR tree-optimization/71831
	* gcc.dg/builtin-object-size-16.c: New test.
	* gcc.dg/builtin-object-size-17.c: New test.

2016-09-01  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR libgfortran/77393
	* gfortran.dg/fmt_f0_2.f90: Update tests for available kinds.

2016-09-01  Uros Bizjak  <ubizjak@gmail.com>

	* gcc.dg/torture/float128-builtin.c, gcc.dg/torture/float128-floath.c,
	gcc.dg/torture/float128-ieee-nan.c, gcc.dg/torture/float128-tg-2.c,
	gcc.dg/torture/float128-tg.c, gcc.dg/torture/float128x-builtin.c,
	gcc.dg/torture/float128x-floath.c, gcc.dg/torture/float128x-nan.c,
	gcc.dg/torture/float128x-tg-2.c, gcc.dg/torture/float128x-tg.c,